# substrate-evolver

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md  index.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  release.yml
src/: config.rs  i18n.rs  lib.rs
src/agent/: brain.rs  genetics.rs  mod.rs  state.rs
src/core/: environment.rs  mod.rs  substrate.rs
